--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,10 @@
 body {font-family: Tahoma; font-size: 12px;}
-h1 {font-family: Helvetica; font-size: 30px; }
-h2 {font-family: Helvetica; color: #33CCFF;}
+h1 {font-family: Helvetica; font-size: 55px; color: #FFBA87; }
+h2 {font-family: Helvetica; color: #586099; font-size: 20px;}
+h4 {margin-left: 15px;}
+h1 {border: 1px solid black; background-color: #586099;
+padding: 10px }
+ul {display: inline;}
+
+* {background-color: #CCBDB8;}
+.address { text-align: horizontal;}
