--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,4 +7,4 @@ padding: 10px }
 ul {display: inline;}
 
 * {background-color: #CCBDB8;}
-.Online {font-size: 30px; padding: -5px;}
+.Online {font-size: 30px;}
