--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,6 @@ h4 {margin-left: 15px;}
 h1 {border: 1px solid black; background-color: #586099;
 padding: 10px }
 ul {display: inline;}
-
+p {font-size: 12px;
 * {background-color: #CCBDB8;}
 .Online {font-size: 30px;}
