--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,4 +10,4 @@ h3 {font-family: Helvetica; font-size: 20px; color: black; }
 
 
 .Online {font-size: 30px;}
-.Contactme {font-size: 70px; margin-top: -2px: margin-bottom: -2px;}
+.Contactme {font-size: 70px;}
