--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,3 +11,4 @@ h3 {font-family: Helvetica; font-size: 20px; color: black; }
 
 .Online {font-size: 30px;}
 .Contactme {font-size: 70px;}
+.Opening {font-size: 25px;
