--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@ h2 {font-family: Helvetica; color: #586099; font-size: 25px;}
 h4 {margin-left: 15px;}
 h1 {border: 1px solid black; background-color: #586099;
 padding: 10px }
-ul li {display: inline;}
+nav li {display: inline;}
 p {font-size: 12px;
 h3 {font-family: Helvetica; font-size: 20px; color: black; }
 
