--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@ h4 {margin-left: 15px;}
 h1 {border: 1px solid black; background-color: #586099;
 padding: 10px }
 nav li {display: inline;}
-p {font-size: 12px;
+p {font-size: 12px;}
 h3 {font-family: Helvetica; font-size: 20px; color: black; }
 
 
