--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,4 +11,4 @@ h3 {font-family: Helvetica; font-size: 20px; color: black; }
 
 .Online {font-size: 35px;}
 .Contactme {font-size: 70px;}
-.Opening {font-family: Times, serif; font-size: 200%;}
+.Opening {font-family: Times, serif; font-size: 50px;}
